# chesstensible-effects

./: .gitignore  LICENSE  README.md  README.txt  chess.cabal  stack.yaml
src/: Board.hs  Chess.hs  Game.hs  Grid.hs  IMCS.hs  Main.hs  Zobrist.hs
src/Agent/: AlphaBetaNegamax.hs  Console.hs  IMCSOpponent.hs  Negamax.hs
src/Control/Monad/Freer/: Choice.hs  Console.hs  EarlyReturn.hs  Rand.hs  Socket.hs  Time.hs
src/Grid/: Array.hs  List.hs
src/Script/: ConsoleVsConsole.hs  ConsoleVsIMCSOpponent.hs  ConsoleVsNegamax.hs  IMCSConsole.hs  NegamaxVsIMCSOpponent.hs  NegamaxVsNegamax.hs
test/: Test.hs
