name:                chess
version:             0.1.0.0
author:              Katie Casamento
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable chess
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Agent
                     , Agent.Console
                     , Chess
                     , Game
                     , Grid
                     , Grid.Array
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , time
                     , monad-time
                     , array
                     , extensible-effects
                     , freer-effects
                     , constraints
