name:                chess
version:             0.1.0.0
author:              Katie Casamento
build-type:          Simple
cabal-version:       >=1.10

executable chess
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -fwarn-incomplete-patterns
  default-extensions:  AllowAmbiguousTypes ApplicativeDo ConstraintKinds DataKinds FlexibleContexts FlexibleInstances
                       FunctionalDependencies GADTs KindSignatures LambdaCase MultiParamTypeClasses NamedFieldPuns
                       PolyKinds RankNTypes RecordWildCards ScopedTypeVariables TypeApplications TypeFamilies
                       TypeOperators ViewPatterns

  other-modules:       Agent.AlphaBetaNegamax
                     , Agent.Console
                     , Agent.IMCSOpponent
                     , Control.Monad.Freer.Choice
                     , Control.Monad.Freer.Console
                     , Control.Monad.Freer.EarlyReturn
                     , Control.Monad.Freer.Rand
                     , Control.Monad.Freer.Socket
                     , Control.Monad.Freer.Time
                     , Chess
                     , Grid
                     , Grid.Array
                     , IMCS
                     , Script.ConsoleVsConsole
                     , Script.ConsoleVsNegamax
                     , Script.NegamaxVsIMCSOpponent
                     , Zobrist

  build-depends:       base >= 4.7 && < 5
                     , array
                     , bytestring
                     , containers
                     , freer-effects
                     , monad-loops
                     , network-simple
                     , random
                     , time

test-suite test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test src
  main-is:             Test.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Test
  default-language:    Haskell2010

  other-modules:       Agent.Console
                     , Agent.Negamax
                     , Chess
                     , Grid
                     , Grid.Array
                     , Test.Move

  build-depends:       base
